// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled pill correctly 1`] = `
<li
  data-radium={true}
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clippath": "inset(50%)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <test-file-stub
        aria-hidden="true"
        data-radium={true}
        style={
          Object {
            "fill": "#757575",
            "height": 22,
            "width": 22,
          }
        }
      />
      <input
        checked={false}
        data-radium={true}
        id="selection1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "MozAppearance": "none",
            "MsAppearance": "none",
            "WebkitAppearance": "none",
            "appearance": "none",
            "backgroundImage": "none",
            "cursor": "pointer",
            "height": 22,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 22,
          }
        }
        type="checkbox"
      />
    </div>
    <label
      data-radium={true}
      htmlFor="selection1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "#F7F7F7",
          "borderColor": "#E0E0E0",
          "borderRadius": 24,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "rgba(67, 176, 42, 0.6)",
          "display": "block",
          "fontSize": 14,
          "fontWeight": 600,
          "height": 32,
          "lineHeight": "32px",
          "marginBottom": 0,
          "marginLeft": "4px",
          "marginRight": "4px",
          "marginTop": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
          "transition": "background-color 150ms ease-in-out",
        }
      }
    >
      Disabled pill
    </label>
  </div>
</li>
`;

exports[`renders element attributes on pill correctly 1`] = `
<li
  data-radium={true}
  style={
    Object {
      "margin": "10px",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clippath": "inset(50%)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <test-file-stub
        aria-hidden="true"
        data-radium={true}
        style={
          Object {
            "fill": "#757575",
            "height": 22,
            "width": 22,
          }
        }
      />
      <input
        checked={false}
        data-radium={true}
        id="selection1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "MozAppearance": "none",
            "MsAppearance": "none",
            "WebkitAppearance": "none",
            "appearance": "none",
            "backgroundImage": "none",
            "cursor": "pointer",
            "height": 22,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 22,
          }
        }
        type="checkbox"
      />
    </div>
    <label
      data-radium={true}
      htmlFor="selection1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "borderColor": "#E0E0E0",
          "borderRadius": 24,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#43B02A",
          "display": "block",
          "fontSize": 14,
          "fontWeight": 600,
          "height": 32,
          "lineHeight": "32px",
          "marginBottom": 0,
          "marginLeft": "4px",
          "marginRight": "4px",
          "marginTop": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
          "transition": "background-color 150ms ease-in-out",
        }
      }
    >
      pill with attributes
    </label>
  </div>
</li>
`;

exports[`renders element attributes on pill correctly 2`] = `
<li
  data-radium={true}
  style={
    Object {
      "margin": "10px",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clippath": "inset(50%)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <test-file-stub
        aria-hidden="true"
        data-radium={true}
        style={
          Object {
            "fill": "#757575",
            "height": 22,
            "width": 22,
          }
        }
      />
      <input
        checked={false}
        data-radium={true}
        id="selection1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "MozAppearance": "none",
            "MsAppearance": "none",
            "WebkitAppearance": "none",
            "appearance": "none",
            "backgroundImage": "none",
            "cursor": "pointer",
            "height": 22,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 22,
          }
        }
        type="checkbox"
      />
    </div>
    <label
      data-radium={true}
      htmlFor="selection1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "borderColor": "#E0E0E0",
          "borderRadius": 24,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#43B02A",
          "display": "block",
          "fontSize": 14,
          "fontWeight": 600,
          "height": 32,
          "lineHeight": "32px",
          "marginBottom": 0,
          "marginLeft": "4px",
          "marginRight": "4px",
          "marginTop": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
          "transition": "background-color 150ms ease-in-out",
        }
      }
    >
      pill with attributes
    </label>
  </div>
</li>
`;

exports[`renders selected pill correctly 1`] = `
<li
  data-radium={true}
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clippath": "inset(50%)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <test-file-stub
        aria-hidden="true"
        data-radium={true}
        style={
          Object {
            "fill": "#757575",
            "height": 22,
            "width": 22,
          }
        }
      />
      <input
        checked={false}
        data-radium={true}
        id="selection1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "MozAppearance": "none",
            "MsAppearance": "none",
            "WebkitAppearance": "none",
            "appearance": "none",
            "backgroundImage": "none",
            "cursor": "pointer",
            "height": 22,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 22,
          }
        }
        type="checkbox"
      />
    </div>
    <label
      data-radium={true}
      htmlFor="selection1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(67, 176, 42, 0.1)",
          "borderColor": "#43B02A",
          "borderRadius": 24,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#43B02A",
          "display": "block",
          "fontSize": 14,
          "fontWeight": 600,
          "height": 32,
          "lineHeight": "32px",
          "marginBottom": 0,
          "marginLeft": "4px",
          "marginRight": "4px",
          "marginTop": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
          "transition": "background-color 150ms ease-in-out",
        }
      }
    >
      selected pill
    </label>
  </div>
</li>
`;

exports[`renders unselected pill correctly 1`] = `
<li
  data-radium={true}
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clippath": "inset(50%)",
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <test-file-stub
        aria-hidden="true"
        data-radium={true}
        style={
          Object {
            "fill": "#757575",
            "height": 22,
            "width": 22,
          }
        }
      />
      <input
        checked={false}
        data-radium={true}
        id="selection1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "MozAppearance": "none",
            "MsAppearance": "none",
            "WebkitAppearance": "none",
            "appearance": "none",
            "backgroundImage": "none",
            "cursor": "pointer",
            "height": 22,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "width": 22,
          }
        }
        type="checkbox"
      />
    </div>
    <label
      data-radium={true}
      htmlFor="selection1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "borderColor": "#E0E0E0",
          "borderRadius": 24,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#43B02A",
          "display": "block",
          "fontSize": 14,
          "fontWeight": 600,
          "height": 32,
          "lineHeight": "32px",
          "marginBottom": 0,
          "marginLeft": "4px",
          "marginRight": "4px",
          "marginTop": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
          "transition": "background-color 150ms ease-in-out",
        }
      }
    >
      Not selected pill
    </label>
  </div>
</li>
`;
